--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-
 language: python
 python:
  - "2.7"
@@ -9,7 +8,8 @@ install:
   - pip install pytest-cov
 
 script: 
-  - pytest 
+  - pytest --cov=app test_app.py
+
 
 after_success:
-  -coveralls
+  - coveralls
