--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install pytest-cov
 
 script: 
-  - pytest --cov=app test_order.py
+  - pytest --cov=app test_app.py
 
 
 after_success:
