--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,12 @@ install:
 
 script: 
   - pytest --cov=app test_app.py
+  - python -m coverage report -m
 
 
 after_success:
   - coveralls
 
+after_script:
+  - coveralls
   
