--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install pytest-cov
 
 script: 
-  - pytest --cov=app test_app.py
+  - coverage run -m --source api pytest
   - python -m coverage report -m
 
 
